Initial implementation of keyword-based query
